[gd_scene load_steps=2 format=3 uid="uid://c477nqbp0e8mu"]

[ext_resource type="Script" path="res://battlescape/UI/NewUnitPanel.gd" id="1_ubtde"]

[node name="NewUnitPanel" type="PanelContainer"]
offset_right = 500.0
offset_bottom = 646.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ubtde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 500.0
offset_bottom = 646.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
offset_right = 500.0
offset_bottom = 26.0
text = "UNIT"

[node name="SoldiersLabel" type="Label" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 500.0
offset_bottom = 56.0
text = "Soldiers"

[node name="SoldiersGrid" type="GridContainer" parent="VBoxContainer"]
offset_top = 60.0
offset_right = 500.0
offset_bottom = 60.0
columns = 5

[node name="IconsLabel" type="Label" parent="VBoxContainer"]
offset_top = 64.0
offset_right = 500.0
offset_bottom = 90.0
text = "Icons"

[node name="IconsGrid" type="GridContainer" parent="VBoxContainer"]
offset_top = 94.0
offset_right = 500.0
offset_bottom = 94.0
columns = 5

[node name="StrategiesLabel" type="Label" parent="VBoxContainer"]
offset_top = 98.0
offset_right = 500.0
offset_bottom = 124.0
text = "Strategies"

[node name="StrategiesGrid" type="GridContainer" parent="VBoxContainer"]
offset_top = 128.0
offset_right = 500.0
offset_bottom = 128.0
columns = 5
